<resources>
    <string name="home">Home</string>
    <string name="myclub">My Club</string>
    <string name="myprofile">My Profile</string>
    <string name="LogOut">Log Out</string>
    <string name="logout">Log Out</string>
    <string name="settings">Settings</string>
    <string name="accessibillity">Accessibillity</string>
    <string name="main_menu">MainMenu</string>
    <string name="user_icon">User icon</string>
    <string name="warning_epilepsia">Not suitable for people with epilepsy</string>
    <string name="warning_vertigo">Not suitable for people with dizziness or vertigo problems</string>
    <string name="warning_visual">It can cause visual fatigue</string>
    <string name="warning_delay">It is recommended not to use for more than 30 minutes in a row</string>
    <string name="warning_phobia">If you suffer from any fear or phobia, it is recommended to be extremely careful when using virtual reality viewers</string>
    <string name="category_simulation">Simulation</string>
    <string name="category_action">Action</string>
    <string name="category_arcade">Arcade</string>
    <string name="category_adventure">Adventure</string>
    <string name="category_inmersive">Inmersive</string>
    <string name="terror">Terror</string>
    <string name="headsets_htc">HTC Vive</string>
    <string name="headsets_oculus">Oculus Quest 2</string>
    <string name="headsets_pico">Pico Neo 3</string>
    <string name="reverb">HP Reverb G2</string>
    <string name="recent_news">Recent News</string>
    <string name="my_profile">My Profile</string>
    <string name="popular_games">Popular Games</string>
    <string name="club_points">Club Points</string>
    <string name="your_vr_points">Your VR Points</string>
    <string name="next_points_steps">Next Points Steps</string>
    <string name="contact">Contact</string>
    <string name="e_mail">E-Mail</string>
    <string name="app_settings_name">Club VR - IETI</string>
    <string name="about_the_app">About the App</string>
    <string name="permissions">Permissions</string>
    <string name="storage_permission">Storage permission:</string>
    <string name="notification_permission">Notification permission:</string>
    <string name="tech_support">Tech Support</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="catalan">Catalan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="user_success_login">The user has been logged in!</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_logout_title">Log Out</string>
    <string name="dialog_logout_message">Do you wanna logout?</string>
    <string name="description">DESCRIPTION</string>
    <string name="user_failed_login">The password is not correct.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="change_password">Change password</string>
    <string name="experience_detail_rating">"Rating: "</string>
    <string name="images">Images</string>
    <string name="about_the_app_value">This is the app of the virtual reality club of the high school IES Esteve Terradas I Illa. The aim of the app is to help the students of the center to have updated information about the virtual reality club, as well as to have knowledge about the improvements of the club, which experiences are available.</string>
    <string name="change_your_password_below">Change your password below:</string>
</resources>