<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_your_password_below"
        android:layout_gravity="center_horizontal"
        android:textSize="18dp"
        android:textStyle="bold"/>


    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/change_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/current_password" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/change_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/new_password" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/change_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/repeat_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/change_password_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"/>

</LinearLayout>